# SentinelAI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sentinelai.db-journal  test_sentinelai.db-journal
alembic/: env.py
alembic/versions/: 0001_init.py
eval/: run_eval.py  score_eval.py
eval/fixtures/: incident_001.json  incident_001_expected.json  incident_002.json  incident_002_expected.json  incident_003.json  incident_003_expected.json  incident_004.json  incident_005.json  incident_005_expected.json  incident_006.json  incident_006_expected.json
scripts/: seed_incidents.py  seed_knowledge.py
sentinelai/: __init__.py
sentinelai/agents/: log_agent.py  retrieval_agent.py  reviewer_agent.py  rootcause_agent.py  workflow.py
sentinelai/api/: dependencies.py  main.py
sentinelai/api/routes/: incidents.py  knowledge.py  reports.py
sentinelai/core/: config.py  db.py
sentinelai/models/: db.py
sentinelai/schemas/: agent.py  incident.py  knowledge.py  report.py
sentinelai/services/: incident_service.py  investigation_service.py  knowledge_service.py  report_service.py
static/: index.html
tests/: conftest.py  test_api.py
